--- a/05-infer/05-lesson/05-05-lesson.Rmd
+++ b/05-infer/05-lesson/05-05-lesson.Rmd
@@ -30,6 +30,7 @@ knitr::opts_chunk$set(fig.align = "center",
 manhattan <- read_csv("data/manhattan.csv")
 set.seed(20170801)
 
+# Create filtered dataset for use in exercises
 ncbirths_complete_visits <- ncbirths |>
   filter(!is.na(visits))
 
