fix: make objects accessible in exercise 5 by adding setup chunk name
Added chunk name 'ex5-setup' to make objects (mod and gpa_bins) accessible
in exercise 5. Without the named setup chunk, these objects were not
available in the exercise chunk, causing 'object not found' errors.

Fixes #268

--- a/03-model/09-lesson/03-09-lesson.Rmd
+++ b/03-model/09-lesson/03-09-lesson.Rmd
@@ -468,7 +468,7 @@ Note that the left hand side is the expected probability $y$ of being accepted t
 
 
 
-```{r}
+```{r ex5-setup}
 mod <- glm(Acceptance ~ GPA, data = MedGPA, family = binomial)
 
 gpa_bins <- quantile(MedGPA$GPA, probs = 0:6/6)
