fix: make hrly_pay accessible in exercise 5
The setup chunk for exercise 5 had include = FALSE, which meant the
hrly_pay variable was not accessible in the exercise chunk. Removed
the include = FALSE option to make the variable available.

Fixes #243

--- a/05-infer/07-lesson/05-07-lesson.Rmd
+++ b/05-infer/07-lesson/05-07-lesson.Rmd
@@ -1089,7 +1089,7 @@ The `acs12_complete_hrlypay_citizen` is already loaded for you.
 
 **Remember** the `t_test()` function behaves similarly to the `calculate()` function! 
 
-```{r citizens_5-setup, include = FALSE}
+```{r citizens_5-setup}
 ## Complete hourly pay and citizenship 
 acs12_complete_hrlypay_citizen <- acs12 |>
   mutate(hrly_pay = income / (hrs_work * 52)) |>
